# keggle-analyzer

./: .gitignore  README.md  compose.yaml  docker-compose.yml  poetry.toml  start.sh
analyzer/: pyproject.toml
analyzer/analyzer/analyzes/: abc_analyze.py  chain.py  schemas.py
analyzer/analyzer/api/: app.py  auth.py  db.py  models.py  routers.py  schemas.py
api/exteranl/: README.md  kaggle.py
auth/: pyproject.toml
auth/auth/: app.py
auth/auth/internal/: db.py
backend/: Dockerfile  pyproject.toml
backend/backend/: app.py  routes.py
backend/backend/api/kaggle/: routes.py  schemas.py
backend/backend/api/middlewares/: rabbitmq.py
backend/backend/utils/: auth.py  queue_manager.py
kaggle-api/: Dockerfile  kaggle.json  pyproject.toml
kaggle-api/kaggle_api/: app.py  internal_api.py  kaggle_api.py
kaggle-api/kaggle_api/services/: __init__.py  callbackes.py  kaggle_api.py  schemas.py
kaggle-api/kaggle_api/utils/: checks.py  path.py
kaggle-api/ops/: build.sh  start.sh
kaggle-api/tests/: __init__.py
kaggle-storage-manager/: Dockerfile  pyproject.toml
kaggle-storage-manager/kaggle_storage_manager/: app.py
kaggle-storage-manager/kaggle_storage_manager/downloader/services/: __init__.py  callbackes.py
kaggle-storage-manager/kaggle_storage_manager/downloader/utils/: checks.py
kaggle-storage-manager/kaggle_storage_manager/storage/: __init__.py
scripts/: delete_kaggle_json.py  generate_kaggle_json.py
storage-manager/: Dockerfile  pyproject.toml
storage-manager/storage_manager/: app.py
