[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["bani2016up <bani2016up@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
SQLAlchemy = "2.0.36"
authlib = "^1.3.2"
httpx = "0.27.2"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
