[tool.poetry]
package-mode = false
name = "Kaggle Analyzer [API]"
version = "0.0.1"
description = "Insert any link and analyze kaggle dataset."
license = "MIT"
authors = ["bani2016up@gmail.com", "dkparfenov@hse.ru"]
maintainers = ["bani2016up@gmail.com", "dkparfenov@hse.ru"]
readme = "README.md"
homepage = "https://github.com/bani2016up/kaggle-analyzer.gite"
repository = "https://github.com/bani2016up/kaggle-analyzer.gite"
documentation = "https://github.com/bani2016up/kaggle-analyzer.gite"

classifiers = [
    "Development Status :: 1 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Streamlit",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.12"
]
packages = [{ include = "kaggle_Analyzer" }]

[tool.poetry.dependencies]
python = "^3.12"
FastAPI = "0.115.5"
uvicorn = "^0.32.1"


[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pre-commit = "*"
ruff = "*"



[tool.poetry.extras]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
