[tool.poetry]
name = "storage-manager"
version = "0.1.0"
description = ""
authors = ["bani2016up <bani2016up@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
pymongo = "^3.12.0"
meilisearch = "^0.22.0"
python-dotenv = "^1.0.1"
pydantic = "2.10.1"
kaggle = "^1.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
